--- a/src/app/addpatient/addpatient.component.html
+++ b/src/app/addpatient/addpatient.component.html
@@ -27,7 +27,7 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">Mobile Number</label>
-                    <input name="mobileno"[(ngModel)]="mobileno" type="number" class="form-control">
+                    <input name="mobileno"[(ngModel)]="mobileno" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
