--- a/src/app/viewpatient/viewpatient.component.html
+++ b/src/app/viewpatient/viewpatient.component.html
@@ -7,7 +7,7 @@
             <thead>
                 <tr>
                     <th scope="col">Patient ID</th>
-                    <th scope="col">Patiet Name</th>
+                    <th scope="col">Patient Name</th>
                     <th scope="col">Address</th>
                     <th scope="col">Contact Number</th>
                     <th scope="col">Date of Appointment</th>
