--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,6 +13,10 @@
                     <li class="nav-item">
                         <a class="nav-link active " routerLink="/view" >View Patient</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link active " routerLink="/search" >Search Patient</a>
+                      </li>
+            
             </ul>
       </div>
     </div>
